Fix css wrap

--- a/app/assets/stylesheets/admin/general.sass
+++ b/app/assets/stylesheets/admin/general.sass
@@ -61,7 +61,7 @@ a > .icon:not(.fitted):last-child
 // CONTENT EDITABLE
 [contenteditable]
   cursor: text
-  white-space: pre
+  white-space: pre-line
 
 // PLACEHOLDER HACK
 [contenteditable]:empty:before
